# rust-lang_reco

./: Cargo.toml  README.md
data/: empty_dirs.py  fetch_texts.py
data/test/English/: 1.txt  2.txt  3.txt  4.txt  5.txt
data/test/German/: 1.txt  2.txt  3.txt  4.txt  5.txt
data/test/Polish/: 1.txt  2.txt  3.txt  4.txt  5.txt
data/train/English/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+10 more)
data/train/German/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+10 more)
data/train/Polish/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+10 more)
src/: anal.rs  args.rs  cfg.rs  data.rs  lang_set.rs  lib.rs  main.rs  text_descr.rs  ty.rs
src/lang_set/: err.rs
