[package]
name = "lang_reco"
version = "0.1.0"
edition = "2021"
description = "App for guessing language of the provided text."
license = "MIT"

[lib]
name = "lreco"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
derive_more = "0.99.17"
elsa = "1.10.0"
nalgebra = "0.32.5"
num-rational = "0.4.1"
perc_ic = { git = "https://github.com/Siiir/rust-perceptron"}
rand = "0.8.5"
thiserror = "1.0.58"

[profile.comp_time]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true
