[package]
name = "lang_reco"
version = "1.0.0"
edition = "2021"
description = "App for guessing language of the provided text."
license = "MIT"
repository = "https://github.com/Siiir/rust-lang_reco"

[lib]
name = "lreco"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
derive_more = "0.99.17"
elsa = "1.10.0"
nalgebra = "0.32.5"
num-rational = "0.4.1"
num-traits = "0.2.18"
perc_ic = { git = "https://github.com/Siiir/rust-perceptron"}
rand = "0.8.5"
thiserror = "1.0.58"

[profile.comp_time]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true

[profile.f_release]
inherits = "release"
opt-level = 3
debug = false
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"
